import React from 'react'
import { shallow } from 'enzyme'
import '@testing-library/jest-dom'
import '../setupTests'
import GifExpertApp from '../GifExpertApp'

describe('Pruebas de <GifExpertApp />', () => {
  test('Debe de mostrar el componente correctamente', () => {
    const wrapper = shallow(<GifExpertApp />)
    expect(wrapper).toMatchSnapshot()
  })

  test('Debe de mostrar una lista de categorias', () => {
    const categories = ['Samurai X', 'One Punch']
    const wrapper = shallow(<GifExpertApp defaultCategories={categories} />)
    expect(wrapper).toMatchSnapshot()
    expect(wrapper.find('GifGrid').length).toBe(categories.length)
  })
})
